2022-02-26 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/aslist.c:
	  Revert changes in slew() which caused regression failures on z80 ports.

2022-02-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbmch.:
	  Add cycle table from upstream.

2022-02-26 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3332.c:
	  Fix bugs #3332 and #3333.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Improve calling convention documentation.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Fix a minor documentation issue.

2022-02-23 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Remove ldi/ldh rules.
	* src/z80/peeph-sm83.def:
	  Add ldi/ldh rules.

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/asxxxx.h,
	  sdcc/sdas/asxxsrc/asmain.c,
	  sdcc/sdas/as6500/r65pst.c:
	  Add .error and .message directives.
	* sdcc/sdas/asxxsrc/assubr.c,
	  sdcc/sdas/asxxsrc/aslex.c,
	  sdcc/sdas/asxxsrc/asexpr.c:
	  More updates from upstream asxxxx 5.40

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/asxxxx.h,
	  sdcc/sdas/asxxsrc/asmain.c,
	  sdcc/sdas/asxxsrc/asexpr.c,
	  sdcc/sdas/asxxsrc/asdata.c:
	  Enable -v option (out of range errors) from upstream asxxxx 5.40.
	* sdcc/sdas/asxxsrc/assubr.c,
	  sdcc/sdas/asxxsrc/asout.c,
	  sdcc/sdas/asxxsrc/asmcro.c,
	  sdcc/sdas/asxxsrc/aslex.c:
	  Change protoypes to ANSI C. Add some detailed error messages.
	* sdcc/sdas/asxxsrc/assym.c:
	  Make area name comparisons case insensitive.

2022-02-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbadr.c,
	  sdas/asgb/gbmch.c,
	  sdas/asrab/rabadr.c,
	  sdas/asrab/rabmch.c:
	  Merge error messages from upstream ASxxxx 5.40.
	  Add a few for extensions/custom ports.

2022-02-22 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/SDCC.lex,
	  sdcc/src/mos6502/main.c: